--- a/package.json
+++ b/package.json
@@ -341,6 +341,7 @@
       "integrity": "sha1-xxMLan6gRpPoQs3J56Hyqjmjn4I=",
       "resolved": "https://registry.npmjs.org/when/-/when-3.7.8.tgz",
       "version": "3.7.8"
-    }
+    },
+    "youtube-audio-stream": "^0.3.6"
   }
 }
