--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zerox-media-player",
-  "version": "0.5.0",
+  "version": "1.0.0",
   "description": "A remote network media player",
   "main": "server.js",
   "scripts": {
@@ -28,8 +28,12 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.2.7",
     "ffplay": "^1.1.0",
+    "ip": "^1.1.5",
     "loudness": "^0.3.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "yt-search": "^2.5.1",
+    "ytdl-core": "^4.2.1"
   }
 }
